Adição da área de avaliação de clientes

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -81,6 +81,42 @@
             </div>
         </section>
 
+        <section class="card-sec">
+            <h2>Avaliações dos Clientes</h2>
+            <div class="card-container">
+                <div class="card">
+                    <h3 class="card-titulo">Nicolas</h3>
+                    <div class="card-texto">
+                        <p>Gostei bastante do atendimento do Ramon. Me auxiliou bastante!! Nota Mil</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3 class="card-titulo">Ariel</h3>
+                    <div class="card-texto">
+                        <p>Gostei bastante do atendimento do Ramon. Me auxiliou bastante!! Nota Mil</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3 class="card-titulo">Katy</h3>
+                    <div class="card-texto">
+                        <p>Gostei bastante do atendimento do Ramon. Me auxiliou bastante!! Nota Mil</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3 class="card-titulo">Thais</h3>
+                    <div class="card-texto">
+                        <p>Gostei bastante do atendimento do Ramon. Me auxiliou bastante!! Nota Mil</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <h3 class="card-titulo">Meire</h3>
+                    <div class="card-texto">
+                        <p>Gostei bastante do atendimento do Ramon. Me auxiliou bastante!! Nota Mil</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="card-sec" id="faq">
             <h2>Perguntas mais frequentes</h2>
             <div class="card-container">
