--- a/src/pages/sobre_Mim.html
+++ b/src/pages/sobre_Mim.html
@@ -28,11 +28,12 @@
     <main>
         <section class="introducao">
             <div class="image-placeholder">
+
             </div>
             <aside class="introducao-container">
                 <div class="introducao-titulos">
                     <h1>Aires Ramon dos Reis</h1>
-                    <h2>Psicologo Clinico</h2>
+                    <h2>Psicólogo Clínico</h2>
                 </div>
                 <div class="introducao-texto">
                     <p>Aires Ramon dos Reis, psicólogo formado pelo Centro Universitário Central Paulista (UNICEP) em 2018. Possuo especialização em Psicologia Infantil pela Faculdade Futura (2020) e, atualmente, curso pós-graduação em Neuropsicologia e Avaliação Psicológica e Psicodiagnóstico pela Faculdade Alcance (FAAL), com conclusão prevista para fevereiro de 2026.</p>
@@ -45,7 +46,6 @@
         <section class="card-sec" id="faq">
             <h2>Perguntas mais frequentes</h2>
             <div class="card-container">
-
                 <div class="card">
                     <h3 class="card-titulo">Agendamento</h3>
                     <div class="card-texto">
@@ -71,7 +71,6 @@
             </div>
         </section>
     </main>
-
 
     <footer class="rodape">
         <nav class="footerbar">
