--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <!--Metadados, link CSS, Icon e Título-->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +15,7 @@
 
 
 <body>
-<!--Header do site com navbar e Imagem de Banner-->
+    <!--Header do site com navbar e Imagem de Banner-->
     <header class="cabecalho">
         <nav class="navbar">
             <a href="index.html">início</a>
@@ -22,26 +23,27 @@
             <a href="contato.html">contato</a>
             <a href="meu_Trabalho.html">meu trabalho</a>
 
-<!--FAQ não te leva para um link interno, ele apenas scrolla até a parte correspondente do site-->
+            <!--FAQ não te leva para um link interno, ele apenas scrolla até a parte correspondente do site-->
             <a href="#faq">dúvidas frequentes</a>
         </nav>
 
-<!--banner citado anteriormente-->
+        <!--banner citado anteriormente-->
         <div class="banner-container">
-            <img alt="banner" class="banner" src="../../public/images/logo_aires_psicologo.jpg" alt="Logotipo do consultório">
+            <img alt="banner" class="banner" src="../../public/images/logo_aires_psicologo.jpg"
+                alt="Logotipo do consultório">
         </div>
     </header>
 
-<!--sessão de introdução ao cliente e sua foto (ainda não adicionada)-->
+    <!--sessão de introdução ao cliente e sua foto (ainda não adicionada)-->
     <main class="principal">
         <section class="introducao">
 
-<!--a imagem a ser adicionada em questão-->
+            <!--a imagem a ser adicionada em questão-->
             <div class="image-placeholder">
 
             </div>
 
-<!--Aside (breve introdução ao cliente)-->
+            <!--Aside (breve introdução ao cliente)-->
             <aside class="introducao-container">
                 <div class="introducao-titulos">
                     <h1>Aires Ramon dos Reis</h1>
@@ -75,12 +77,12 @@
                         si mesmo. É o maior ato de coragem existente.</p>
                 </div>
 
-<!--Link externo para o whatsapp do cliente, presente apenas na home e na pág. "meu trabalho"-->
+                <!--Link externo para o whatsapp do cliente, presente apenas na home e na pág. "meu trabalho"-->
                 <a class="button" href="https://wa.me/5519998518780">Agendar Consulta</a>
             </aside>
         </section>
 
-<!--Div com formas de atendimento e mais um link de agendamento de consulta, presente apenas na home.-->
+        <!--Div com formas de atendimento e mais um link de agendamento de consulta, presente apenas na home.-->
         <section class="card-sec">
             <h2>Formas de Atendimento</h2>
             <div class="card-container">
@@ -96,10 +98,10 @@
             </div>
         </section>
 
-<!--Sessão do FAQ-->
+        <!--Sessão do FAQ-->
         <section class="card-sec" id="faq">
 
-<!--DIV's com link interno para formas de contato, horários e convênios-->
+            <!--DIV's com link interno para formas de contato, horários e convênios-->
             <h2>Perguntas mais frequentes</h2>
             <div class="card-container">
                 <div class="card">
@@ -121,21 +123,29 @@
                 <div class="card">
                     <h3 class="card-titulo">Convênio</h3>
                     <div class="card-texto">
-                        <p>Atualmente participo do plano de convênio "Dona Balbina Clínicas" do Hospital Dona Balbina de Porto Ferreira</p>
+                        <p>Atualmente participo do plano de convênio "Dona Balbina Clínicas" do Hospital Dona Balbina de
+                            Porto Ferreira</p>
                     </div>
                 </div>
             </div>
         </section>
     </main>
 
-<!--Footer simples do site-->
+    <!--Footer simples do site-->
     <footer class="rodape">
+        <p>Site desenvolvido por alunos da FATEC Porto Ferreira</p>
         <nav class="footerbar">
-            <p>Site desenvolvido por alunos da FATEC Porto Ferreira</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3702.927394475279!2d-47.48268182479909!3d-21.86033610131177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94b8023716464b21%3A0x7c9d68fc6c9c2ad4!2sCentro%20Empresarial%20Fragoso!5e0!3m2!1spt-BR!2sbr!4v1762986735143!5m2!1spt-BR!2sbr"></iframe>
+            <a href="https://wa.me/5519998518780" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="32"
+                    height="32" fill="green" class="bi bi-whatsapp" viewBox="0 0 16 16">
+                    <path
+                        d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232" />
+                </svg>(19) 99851-8780</a>
+            <a href="https://www.instagram.com/psi_airesreis/"><svg xmlns="http://www.w3.org/2000/svg" width="32"
+                    height="32" fill="white" class="bi bi-instagram" viewBox="0 0 16 16">
+                    <path
+                        d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
+                </svg>@psi_airesreis</a>
         </nav>
-        
-            
     </footer>
 </body>
 
