--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -15,7 +15,7 @@
     <header class="cabecalho">
         <nav class="navbar">
             <a href="index.html">início</a>
-            <a href="sobre_Mim.html">sobre mim</a>
+            <a href="sobre_mim.html">sobre mim</a>
             <a href="contato.html">contato</a>
             <a href="meu_Trabalho.html">meu trabalho</a>
             <a href="#faq">dúvidas frequentes</a>
