--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -19,7 +19,7 @@
     <header class="cabecalho">
         <nav class="navbar">
             <a href="index.html">início</a>
-            <a href="sobre_Mim.html">sobre mim</a>
+            <a href="sobre_mim.html">sobre mim</a>
             <a href="contato.html">contato</a>
             <a href="meu_Trabalho.html">meu trabalho</a>
 
@@ -39,8 +39,8 @@
         <section class="introducao">
 
             <!--a imagem a ser adicionada em questão-->
-            <div class="image-placeholder">
-
+            <div class="airesImagem">
+                <img src="../../public/images/aires.jpeg" alt="">
             </div>
 
             <!--Aside (breve introdução ao cliente)-->
