--- a/src/pages/sobre_mim.html
+++ b/src/pages/sobre_mim.html
@@ -15,7 +15,7 @@
     <header class="cabecalho">
         <nav class="navbar">
             <a href="index.html">início</a>
-            <a href="sobre_Mim.html">sobre mim</a>
+            <a href="sobre_mim.html">sobre mim</a>
             <a href="contato.html">contato</a>
             <a href="meu_Trabalho.html">meu trabalho</a>
             <a href="#faq">dúvidas frequentes</a>
@@ -27,8 +27,8 @@
     
     <main>
         <section class="introducao">
-            <div class="image-placeholder">
-
+            <div class="airesImagem">
+                <img src="../../public/images/aires.jpeg" alt="">
             </div>
             <aside class="introducao-container">
                 <div class="introducao-titulos">
