Alterações na navfooter (ver depois)

--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -85,7 +85,7 @@
 
     <footer class="rodape">
         <nav class="footerbar">
-            <p>Site desenvolvido por alunos da FATEC Porto Ferreira</p>
+            <h5>Site desenvolvido por alunos da FATEC Porto Ferreira</h5>
         </nav>
     </footer>
 </body>
