--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -169,7 +169,7 @@
 
     <!--Footer simples do site-->
     <footer class="rodape">
-        <nav class="footerbar">
+        <nav class="navfooter">
             <div class="site-map">
                 <a href="#">Inicio</a>
                 <a href="#">Sobre mim</a>
@@ -179,7 +179,7 @@
             </div>
         </nav>
 
-        <p>Site desenvolvido por alunos da FATEC Porto Ferreira</p>
+        <h5>Site desenvolvido por alunos da FATEC Porto Ferreira</h5>
         <nav class="footerbar">
             <div>
                 
