--- a/src/pages/sobre_mim.html
+++ b/src/pages/sobre_mim.html
@@ -71,15 +71,14 @@
             </div>
         </section>
     </main>
-
     <footer class="rodape">
         <nav class="navfooter">
             <div class="site-map">
-                <a href="#">Inicio</a>
-                <a href="#">Sobre mim</a>
-                <a href="#">Contato</a>
-                <a href="#">Meu Trabalho</a>
-                <a href="#">Dúvidas Frequentes</a>
+                <a href="index.html">início</a>
+                <a href="sobre_mim.html">sobre mim</a>
+                <a href="contato.html">contato</a>
+                <a href="meu_Trabalho.html">meu trabalho</a>
+                <a href="#faq">dúvidas frequentes</a>
             </div>
         </nav>
 
@@ -100,6 +99,7 @@
                 </svg>@psi_airesreis</a>
         </nav>
     </footer>
+
 </body>
 
 </html>
