--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/main.css">
 
-    <link rel="shortcut icon" href="../../public/icons/aire-simbulus.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/public/images/logo_aires_psicologo.png" type="image/x-icon">
     <title>Aires Ramon dos Reis</title>
 </head>
 
@@ -21,7 +21,7 @@
             <a href="#faq">dúvidas frequentes</a>
         </nav>
         <div class="banner-container">
-            <img alt="banner" class="banner" src="../../public/images/logo_aires_psicologo.jpg"
+            <img alt="banner" class="banner" src="/public/images/logo_aires_psicologo.png"
                 alt="Logotipo do consultório">
         </div>
     </header>
