retificação e remoção da navfooter

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/main.css">
 
-    <link rel="shortcut icon" href="../../public/icons/aire-simbulus.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/public/images/logo_aires_psicologo.png" type="image/x-icon">
     <title>Aires Ramon dos Reis</title>
 </head>
 
@@ -171,16 +171,6 @@
 
     <!--Footer simples do site-->
     <footer class="rodape">
-        <nav class="navfooter">
-            <div class="site-map">
-                <a href="index.html">início</a>
-                <a href="sobre_mim.html">sobre mim</a>
-                <a href="contato.html">contato</a>
-                <a href="meu_Trabalho.html">meu trabalho</a>
-                <a href="#faq">dúvidas frequentes</a>
-            </div>
-        </nav>
-
         <h5>Site desenvolvido por alunos da FATEC Porto Ferreira</h5>
         <nav class="footerbar">
             <div>
