--- a/src/pages/meu_Trabalho.html
+++ b/src/pages/meu_Trabalho.html
@@ -21,7 +21,7 @@
             <a href="#faq">dúvidas frequentes</a>
         </nav>
         <div class="banner-container">
-            <img class="banner" src="../../public/images/logo_aires_psicologo.jpg" alt="Logotipo do consultório">
+            <img class="banner" src="../../public/images/logo_aires_psicologo.png" alt="Logotipo do consultório">
         </div>
     </header>
     
