Correção da logo e configuração da img.css - Pietro

--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -21,8 +21,7 @@
             <a href="#faq">dúvidas frequentes</a>
         </nav>
         <div class="banner-container">
-            <img alt="banner" class="banner" src="/public/images/logo_aires_psicologo.png"
-                alt="Logotipo do consultório">
+            <img alt="banner" class="banner" src="../../public/images/logo_aires_psicologo.png" alt="Logotipo do consultório">
         </div>
     </header>
 
