--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -29,8 +29,7 @@
 
         <!--banner citado anteriormente-->
         <div class="banner-container">
-            <img style="width: 15vw;" alt="banner" class="banner" src="../../public/images/logo_aires_psicologo.png"
-                alt="Logotipo do consultório">
+            <img style="width: 15vw;" alt="banner" class="banner" src="../../public/images/logo_aires_psicologo.png" alt="Logotipo do consultório">
         </div>
 
 
