adicionados comentários com links na home

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -104,33 +104,47 @@
             <h2>Avaliações dos Clientes</h2>
             <div class="card-container">
                 <div class="card">
-                    <h3 class="card-titulo">Nicolas</h3>
+                    <h3 class="card-titulo">Claudia Tamaio</h3>
                     <div class="card-texto">
-                        <p>Gostei bastante do atendimento do Ramon. Me auxiliou bastante!! Nota Mil</p>
+                        <a class="linkcoments" href="https://share.google/1HB6zA5rhGVxAf3b9" target="_blank" rel="nooper noreferer">
+                        <p class="coments">Profissional excelente, atendimento é de excelência. Sempre no horário, não atrasa, dá direcionamento perfeito.tem me ajudado demais, só tenho a agradecer.
+Recomendo muito a experiência de terapia com ele.</p>
+                        </a>
                     </div>
                 </div>
                 <div class="card">
-                    <h3 class="card-titulo">Ariel</h3>
+                    <h3 class="card-titulo">Naju Tauil</h3>
                     <div class="card-texto">
-                        <p>Gostei bastante do atendimento do Ramon. Me auxiliou bastante!! Nota Mil</p>
+                        <a class="linkcoments" href="https://share.google/3KNn5aZsBEqpXFK9L" target="_blank" rel="nooper noreferer">
+                        <p class="coments">Melhor experiência que eu tive com um profissional da área! É atencioso, empático e acolhedor. Eu não tenho palavras pra expressar a gratidão que eu sinto, obrigada por tudo.
+Super recomendo!</p>
+                        </a>
                     </div>
                 </div>
                 <div class="card">
-                    <h3 class="card-titulo">Katy</h3>
+                    <h3 class="card-titulo">Aline Mara Cruz</h3>
                     <div class="card-texto">
-                        <p>Gostei bastante do atendimento do Ramon. Me auxiliou bastante!! Nota Mil</p>
+                        <a class="linkcoments" href="https://share.google/w75qoYaajCdRTrx6c" target="_blank" rel="nooper noreferer">
+                        <p class="coments">O profissional é excelente.
+Tem a capacidade de alcançar quê escondemos no mais profundo do inconsciente e, mesmo quando não queremos, trabalha as questões que não conseguimos nem perceber que existem.</p>
+                        </a>
                     </div>
                 </div>
                 <div class="card">
-                    <h3 class="card-titulo">Thais</h3>
+                    <h3 class="card-titulo">Fabio Bueno</h3>
                     <div class="card-texto">
-                        <p>Gostei bastante do atendimento do Ramon. Me auxiliou bastante!! Nota Mil</p>
+                        <a class="linkcoments" href="https://share.google/KeOchrF6om9SsW2kB" target="_blank" rel="nooper noreferer">
+                        <p id="fabio">Um excelente psicólogo, demonstra profundo conhecimento e empatia. Ele escuta atentamente, cria um ambiente acolhedor, respeita a confidencialidade e se adapta as necessidades individuais de cada paciente. Além disso é ético e compassivo, continua se atualizando em sua área de atuação. Super recomendo 🙌💪💪</p>
+                        </a>
                     </div>
                 </div>
                 <div class="card">
-                    <h3 class="card-titulo">Meire</h3>
+                    <h3 class="card-titulo">Vera Perna</h3>
                     <div class="card-texto">
-                        <p>Gostei bastante do atendimento do Ramon. Me auxiliou bastante!! Nota Mil</p>
+                        <a class="linkcoments" href="https://share.google/0nWnofnLL1vSCRe5b" target="_blank" rel="nooper noreferer">
+                        <p id="vera">Profissional correto, sempre solícito e atencioso.
+Atendimento top!</p>
+                        </a>
                     </div>
                 </div>
             </div>
