adicionadas cores adequadas

--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -36,21 +36,21 @@
                 <div class="card">
                     <h3 class="card-titulo">Whatsapp</h3>
                     <div class="card-texto">
-                        <a href="https://wa.me/5519998518780" target="_blank">(19) 99851-8780</a>
+                        <a class="linkcoments" href="https://wa.me/5519998518780" target="_blank">(19) 99851-8780</a>
                     </div>
                 </div>
 
                 <div class="card">
                     <h3 class="card-titulo">Instagram</h3>
                     <div class="card-texto">
-                        <a href="https://www.instagram.com/psi_airesreis/" target="_blank">@psi_airesreis</a>
+                        <a class="linkcoments" href="https://www.instagram.com/psi_airesreis/" target="_blank">@psi_airesreis</a>
                     </div>
                 </div>
 
                 <div class="card">
                     <h3 class="card-titulo">E-mail</h3>
                     <div class="card-texto">
-                        <a href="mailto:psico.airesreis@gmail.com" target="_blank">psico.airesreis@gmail.com</a>
+                        <a class="linkcoments" href="mailto:psico.airesreis@gmail.com" target="_blank">psico.airesreis@gmail.com</a>
                     </div>
                 </div>
             </div>
