--- a/src/pages/sobre_mim.html
+++ b/src/pages/sobre_mim.html
@@ -50,7 +50,7 @@
                     <h3 class="card-titulo">Agendamento</h3>
                     <div class="card-texto">
                         <p>Agendamentos somente através de Whatsapp e Instagram</p>
-                        <a href="contato.html">Acesse a página de contato</a>
+                        <a id="Whatsapp" href="contato.html">Acesse a página de contato</a>
                     </div>
                 </div>
 
