teste de mudanças

--- a/src/pages/sobre_mim.html
+++ b/src/pages/sobre_mim.html
@@ -12,6 +12,8 @@
 
 
 <body>
+    <input type="checkbox" id="menu-toggle" class="menu-toggle">
+    <label for="menu-toggle" class="menu-label">☰ MENU</label>
     <header class="cabecalho">
         <nav class="navbar">
             <a href="index.html">início</a>
