--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -13,6 +13,8 @@
 
 <body>
     <header class="cabecalho">
+        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        <label for="menu-toggle" class="menu-label">☰ MENU</label>
         <nav class="navbar">
             <a href="index.html">início</a>
             <a href="sobre_mim.html">sobre mim</a>
