--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,6 +16,8 @@
 
 <body>
     <!--Header do site com navbar e Imagem de Banner-->
+    <input type="checkbox" id="menu-toggle" class="menu-toggle">
+    <label for="menu-toggle" class="menu-label">☰ MENU</label>
     <header class="cabecalho">
         <nav class="navbar">
             <a href="index.html">início</a>
