retificação dos termos do site

--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -18,10 +18,11 @@
             <a href="sobre_mim.html">sobre mim</a>
             <a href="contato.html">contato</a>
             <a href="meu_Trabalho.html">meu trabalho</a>
-            <a href="#faq">dúvidas frequentes</a>
+            <a href="#faq">saiba mais</a>
         </nav>
+
         <div class="banner-container">
-            <img alt="banner" class="banner" src="/public/images/logo_aires_psicologo.png"
+            <img style="width: 15vw;" alt="banner" class="banner" src="../../public/images/logo_aires_psicologo.png"
                 alt="Logotipo do consultório">
         </div>
     </header>
@@ -59,13 +60,13 @@
         
 
         <section class="card-sec" id="faq">
-            <h2>Perguntas mais frequentes</h2>
+            <h2>Saiba Mais</h2>
             <div class="card-container">
                 <div class="card">
                     <h3 class="card-titulo">Agendamento</h3>
                     <div class="card-texto">
                         <p>Agendamentos somente através de Whatsapp e Instagram</p>
-                        <a id="Whatsapp" href="contato.html">Acesse a página de contato</a>
+                        <a id="pag_contato" href="contato.html">Contatos</a>
                     </div>
                 </div>
 
