--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -24,7 +24,7 @@
             <a href="meu_Trabalho.html">meu trabalho</a>
 
             <!--FAQ não te leva para um link interno, ele apenas scrolla até a parte correspondente do site-->
-            <a href="#faq">dúvidas frequentes</a>
+            <a href="#faq">saiba mais</a>
         </nav>
 
         <!--banner citado anteriormente-->
@@ -154,13 +154,13 @@ Atendimento top!</p>
         <section class="card-sec" id="faq">
 
             <!--DIV's com link interno para formas de contato, horários e convênios-->
-            <h2>Perguntas mais frequentes</h2>
+            <h2>Saiba Mais</h2>
             <div class="card-container">
                 <div class="card">
                     <h3 class="card-titulo">Agendamento</h3>
                     <div class="card-texto">
                         <p>Agendamentos somente através de Whatsapp e Instagram</p>
-                        <a id="Whatsapp" href="contato.html">Acesse a página de contato</a>
+                        <a id="pag_contato" href="contato.html">Contatos</a>
                     </div>
                 </div>
 
