arrumado as imagens

--- a/sobre_mim.html
+++ b/sobre_mim.html
@@ -45,7 +45,7 @@
     <main>
         <section class="introducao">
             <div class="airesImagem">
-                <img src="../../public/images/aires.jpeg" alt="">
+                <img src="./public/images/consultorio1.jpeg" alt="">
             </div>
             <aside class="introducao-container">
                 <div class="introducao-titulos">
