mudança de cor no hover

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <!--a imagem a ser adicionada em questão-->
             <div class="airesImagem">
-                <img src="../../public/images/aires.jpeg" alt="">
+                <img src="./public/images/aires.jpeg" alt="">
             </div>
 
             <!--Aside (breve introdução ao cliente)-->
