texto do card retificado

--- a/sobre_mim.html
+++ b/sobre_mim.html
@@ -74,8 +74,9 @@
                 <div class="card">
                     <h3 class="card-titulo">Hórarios</h3>
                     <div class="card-texto">
-                        <p>Segunda-feira à Quinta-feira 07:00 às 20:00</p>
-                        <p>Sexta-Feira 07:00 às 12:00</p>
+                        <p>Segunda-feira à Quinta-feira<br>
+            07:00 às 20:00<br>
+            Sexta-Feira 07:00 às 12:00</p>
                     </div>
                 </div>
 
