ano nos créditos

--- a/meu_trabalho.html
+++ b/meu_trabalho.html
@@ -125,7 +125,7 @@
         </div>
 
     </nav>
-    <h5 class="footer-credito">Site desenvolvido por alunos da FATEC Porto Ferreira</h5>
+    <h5 class="footer-credito">Site desenvolvido por alunos da FATEC Porto Ferreira - 2025</h5>
 </footer>
 </body>
 
